--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/sharris93/jwt-auth-template#readme",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "busboy": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
